tests/models/enum/named/u32/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value {
        #[field(validate = validate_fn)]
        value: u32
    },
}
fn main() {}
